@@ -1,3 +1,13 @@
+2012-07-04 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V00-02-08
+	* histogram bugfixes (after 1st production run)
+	* updating last two lumisections on update
+	* N reporting EP's per type histogram
+	* deque used instead of queue
+	* more careful checking if histograms removed at stop
+	* displaying modules with >2% fraction (was 3%)
+
 2012-07-03 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-02-07
